site/css/main.scss
---
---
@charset "utf-8";

// == Copies of Bootstrap or BAS Style Kit variables

$screen-sm-min: 768px !default;

// ==  Site specific styles

// Styles for Better banner - these will be merged into a future version of the BAS Style Kit

$beta-phase: #f47738;

.bsk-docs-label-phase-beta {
  background-color: $beta-phase;
  border-radius: 0;
}

// Styles for Cookie banner - these will be merged into a future version of the BAS Style Kit

.bsk-docs-alert-top-pin {
  margin-bottom: 0;

  border: none;
  border-radius: 0;
}

.bsk-docs-alert-cookie-banner {
  background-color: #006AAA;
  color: white;

  .alert-link {
    color: white;
  }

  .close {
    filter: alpha(opacity=70);
    opacity: .7;
    color: #E7EBF1;

    &:focus, &:hover {
      filter: alpha(opacity=100);
      opacity: 1;
    }
  }
}

// Styles for topic table of contents

#markdown-toc {
  padding-left: 20px;
}

// Styles for footer
// Some elements to be formalised

.bsk-docs-site-footer {
  &.no-margin {
    margin-top: 0;
  }

  .bsk-docs-site-build-info,
  .bsk-docs-site-back-to-top,
  .footer-bsk-policy-links,
  .bsk-docs-site-licensing {
    margin-top: 10px;
    text-align: center;
  }

  @media (min-width: $screen-sm-min) {
    .bsk-docs-site-back-to-top,
    .footer-bsk-policy-links {
      margin-top: 0;
      text-align: right;
    }

    .bsk-docs-site-build-info,
    .bsk-docs-site-licensing {
      text-align: left;
    }
  }
}

// Styles for BAS logo shown on homepage

.bsk-docs-symbol {
  display: inline-block;
  height: 256px;
  width: 256px;
  background-image: url('{{ "/img/bas-logo-roundel-only.png" | prepend: site.baseurl }}');
  background-repeat: no-repeat;
  background-size: contain;
  border: 3px solid #ffffff;
  border-radius: 100%;
}

// Background image shown on homepage

.bsk-docs-masthead {
  background-image: url('{{ "/img/site-masthead-tom-welsh.jpg" | prepend: site.baseurl }}');
  background-repeat: no-repeat;
  background-size: cover;
}

// Copyright notice shown in the bottom-right of images

.bsk-docs-image-copyright-container {
  display: block;
  position: relative;
}

.bsk-docs-image-copyright-notice {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 3px 8px;
  background-color: rgba(51, 51, 51, 0.8);
  color: #FFFFFF;
}

// Styles for sections on the homepage

.bsk-docs-home-sections {
  section {
    margin-top: 40px;
    margin-bottom: 40px;
  }
  h2 {
    margin-bottom: 20px;
  }

  .btn {
    margin-top: 20px;
  }
}

// Styles for feedback form

.bsk-docs-feedback-form {
  fieldset {
    margin-top: 40px;
  }

  .help-block.margin-before {
    margin-bottom: 20px;
  }
  .help-block.margin-after {
    margin-top: 20px;
  }

  .collapse {
    margin-top: 20px;
  }
}

// Styles for displaying pre blocks like code blocks where white-space needs preserving

.bsk-docs-like-code {
  padding: 2px 4px;
  font-size: 90%;
  background-color: #f9f2f4;
  color: #c7254e;
  border: none;
}

// Styles for displaying rendered portions of examples

.bsk-docs-example {
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;

  padding: 25px;
  border: 2px solid #E7EBF1;
  border-bottom: none;
}

// Styles for displaying columns in grid system examples

.bsk-docs-example .row.bsk-docs-grid-example>[class^=col-] {
  padding-top: 10px;
  padding-bottom: 10px;

  background-color: rgba(195, 195, 195,.15);
  border: 1px solid rgba(140, 140, 140,.2);
  text-align: center;
}

// Styles for displaying content blocks in layout examples

.bsk-docs-content-block {
  padding: 10px;

  background-color: rgba(195, 195, 195,.15);
  border: 1px solid rgba(140, 140, 140,.2);
  text-align: center;
}

.responsive-utilities-test {
  margin-top: 25px;
  margin-bottom: 25px;
}

// Styles for collection index jumbotron's

.bsk-docs-collection-masthead {
  background-color: #006AAA;
  color: #FFFFFF;
}

// Styles for topic dividers in collection indexes
.topic-index-divider {
  margin-top: 20px;

  border-top: 5px solid #007ac3;
}

// Styles for fixing examples, such as fixed with footers and navbars,
// as these would normally spill out of their example containers.

@import 'example-fixes';

// Styles for colour swatches - base classes may become a component in the future
// These are also used for icon lists

@import 'swatches';

// Styles for simulating fonts, normally these are used inherently by relevant elements and components

@import 'fonts';

// Styles for syntax highlighting

@import 'syntax-highlighting';

// Styles for section metadata

.bsk-docs-section-metadata {
  margin-left: -5px;
  margin-bottom: 25px;
  padding-left: 0;

  list-style: none;
  color: #777777;

  &> li {
    display: inline-block;
    padding-right: 5px;
    padding-left: 5px;
  }
}

// Temporary styles for design phases (i.e. discovery, alpha, etc.)
// These will be replaced with a proper set of label variants when the GDS colour scheme is integrated

.label-phase {
    border-radius: 0;

    font-weight: normal;
    text-transform: uppercase;
  }

  .label-phase-alpha {
    background-color: #D53880;
  }
  .label-phase-beta {
    background-color: #F47738;
  }
  .label-phase-live {
    background-color: #85994B;
  }
  .label-phase-deprecated {
    background-color: #6F777B;
  }

// Temporary styles for site version (i.e. highlights to indicate this is a staging/testing site)
// These will be become a variant of the navbar component in the future

// $testing-background-colour: #77ccff;  // blue
// $testing-foreground-colour: #333333;

// $testing-background-colour: #7cf7cf;  // aquamarine
// $testing-foreground-colour: #333333;

// $testing-background-colour: #6F72AF;  // purple - GDS mauve
// $testing-foreground-colour: #ffffff;

// $testing-background-colour: #E1BEE7;  // purple - MD purple
// $testing-foreground-colour: #333333;

$testing-background-colour: #D1C4E9;  // purple - MD deep purple
$testing-foreground-colour: #311B92;
$testing-border-colour: #B39DDB;

$testing-link-foreground-colour: $testing-foreground-colour;

.bsk-docs-navbar-testing {
  border-bottom: 5px solid $testing-background-colour;
}
.bsk-docs-testing {
  color: $testing-background-colour !important;
}
.bsk-docs-alert-testing {
  border-radius: 0;
  background-color: $testing-background-colour;
  border-color: $testing-border-colour;
  color: $testing-foreground-colour;

  .alert-link {
    color: $testing-link-foreground-colour;
  }

  // Enable for darker testing colours
  /*
  .close {
    filter: alpha(opacity=100);
    opacity: 1;

    &:focus, &:hover {
      color: #E7EBF1;
    }
  }
  */

  &.margin-top {
    margin-top: 50px;
    margin-bottom: 0;
  }
  &.margin-bottom {
    margin-top: -20px;
    margin-bottom: 20px;
    border-bottom: 5px solid $testing-background-colour;
  }
}

.bsk-docs-alert-no-border {
  border: none;
}

